# intent-slot-filling

./: .gitignore  README.md  pyproject.toml
configs/: train.yaml
configs/model/: joint_bert.yaml  slot_attention.yaml
notebooks/: 01_data_exploration.ipynb
scripts/: evaluate.sh  train.sh
src/: __init__.py
src/data/: __init__.py  dataset.py  tokenization.py  vocab.py
src/inference/: __init__.py  predict.py
src/models/: __init__.py  crf.py  joint_bert.py  slot_attention.py
src/training/: __init__.py  metrics.py  trainer.py
tests/: test_tokenization.py
