[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-slot-filling"
version = "0.1.0"
description = "Joint intent classification and slot filling for conversational AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ankit Das", email = "ankit@twinninglabs.com"},
]
keywords = ["nlp", "nlu", "intent-classification", "slot-filling", "bert", "conversational-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "omegaconf>=2.3.0",
    "seqeval>=1.2.2",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.11",
    "mypy>=1.5.0",
    "ipykernel>=6.25.0",
]

[project.urls]
Homepage = "https://github.com/TheGalaxyHunter/intent-slot-filling"
Repository = "https://github.com/TheGalaxyHunter/intent-slot-filling"
Issues = "https://github.com/TheGalaxyHunter/intent-slot-filling/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
